fix: add shift active for mouseclick

--- a/styles.css
+++ b/styles.css
@@ -74,9 +74,7 @@ p {
     width: 85px;
 }
 
-.shift-left {
-    width: 100px;
-}
+
 
 .space{
     width: calc(50px * 6 );
